Allow extractor build on Arm platform
-Not sure if this will work or not. Has not been tested in a while it appears.

--- a/.github/workflows/ubuntu-arm64.yml
+++ b/.github/workflows/ubuntu-arm64.yml
@@ -20,7 +20,7 @@ jobs:
           - COMPILER_CC: clang
             COMPILER_PP: clang++
             USE_PCH: ON
-            EXTRA_BUILD: "-DBUILD_AHBOT=ON -DBUILD_PLAYERBOT=ON -DBUILD_SOLOCRAFT=ON "
+            EXTRA_BUILD: "-DBUILD_AHBOT=ON -DBUILD_PLAYERBOT=ON -DBUILD_SOLOCRAFT=ON -DBUILD_EXTRACTORS=ON "
 
     steps:
     
