--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -7,15 +7,15 @@ env:
   BUILD_TYPE: Release
   REPO_DIR : ${{github.workspace}}
   BUILD_DIR: ${{github.workspace}}/bin/builddir
-  BOOST_VERSION: "1.83.0"
-  BOOST_PLATFORM_VERSION: "12"
+  #BOOST_VERSION: "1.83.0"
+  #BOOST_PLATFORM_VERSION: "12"
 
 permissions:
   contents: read
 
 jobs:
   build:
-    runs-on: macos-12
+    runs-on: macos-14
     permissions:
       contents: read
 
@@ -30,26 +30,27 @@ jobs:
         run: |
           brew install mysql-client
           brew install openssl
+          brew install boost@1.85
           echo "OPENSSL_ROOT_DIR=$(brew --prefix --installed openssl)" >> $GITHUB_ENV
 
-      - name: Install Boost
-        uses: MarkusJx/install-boost@v2.4.5
-        id: install-boost
-        with:
+#      - name: Install Boost
+#        uses: MarkusJx/install-boost@v2.4.5
+#        id: install-boost
+#        with:
           # REQUIRED: Specify the required boost version
           # A list of supported versions can be found here:
           # https://github.com/MarkusJx/prebuilt-boost/blob/main/versions-manifest.json
-          boost_version: ${{env.BOOST_VERSION}}
+#          boost_version: ${{env.BOOST_VERSION}}
           # OPTIONAL: Specify a platform version
-          platform_version: ${{env.BOOST_PLATFORM_VERSION}}
+#          platform_version: ${{env.BOOST_PLATFORM_VERSION}}
           # OPTIONAL: Specify a toolset
-          toolset: clang
+#          toolset: clang
           # NOTE: If a boost version matching all requirements cannot be found,
           # this build step will fail
 
       - name: Configure
-        env:
-          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+#        env:
+#          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
         run: cmake -DBUILD_ELUNA=ON -B ${{env.BUILD_DIR}} -S ${{env.REPO_DIR}} -DBoost_ARCHITECTURE=-x64
 
       - name: Build
